Fix #37, Fix Multiple users overflowing login card

--- a/default.css
+++ b/default.css
@@ -1499,11 +1499,11 @@ html:not(.layout-mobile) #loginPage .inputLabel:not(.inputLabel-float) {
   -o-transform: translateY(-50%) scale(1.1);
 }
 
-/*Login background*/
+/*Login Page Theming*/
 
 #loginPage {
   background: url(https://prayag17.github.io/JellySkin/login.png),
-    radial-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5)) !important;
+    radial-gradient(rgba(0, 0, 0, 0), rgba(0, 0, 0, 0.5));
   background-size: cover !important;
   background-blend-mode: overlay;
   margin-top: 0 !important;
@@ -1513,6 +1513,14 @@ html:not(.layout-mobile) #loginPage .inputLabel:not(.inputLabel-float) {
 
 #loginPage .squareCard {
   width: 50%;
+}
+
+div#divUsers {
+  display: flex;
+  flex-flow: row;
+  justify-content: flex-start;
+  align-items: center;
+  overflow-x: scroll;
 }
 
 #loginPage .padded-left.padded-right.padded-bottom-page {
